# supercode

./: .gitignore  Cargo.toml  Makefile  Taskfile.yml  flake.nix
.opencode/agent/: developer.md  manager.md  reviewer.md
docs/examples/: config.yml
docs/plans/: alternatives.md  goals.md  requirements.md
docs/progress/: changelog.md  implementation-progress.md  issues.md  research-notes.md  roadmap.md
docs/progress/reviews/: SUMMARY.md  architecture-review.md  code-quality-review.md  implementation-gaps-review.md
docs/system/: api.md  architecture.md  components.md
scripts/: generate-opencode-config.sh
src/: lib.rs  main.rs
src/agent/: gates.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/config/: config.rs  keygen.rs  mod.rs  peer.rs
src/core/: mod.rs  state.rs
src/db/: connection.rs  mod.rs  schema.rs
src/db/repositories/: mod.rs  project.rs  session.rs
src/mcp/: mod.rs  peer_server.rs  server.rs  types.rs
src/monitor/: claude.rs  mod.rs  monitor_trait.rs  opencode.rs  state.rs
src/session/: claude_provider.rs  manager.rs  mod.rs  opencode_provider.rs  provider.rs
src/session/claude/: client.rs  mod.rs
src/session/opencode/: client.rs  mod.rs
tests/: db_test.rs  gates_test.rs
